--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2em;
 }
 
 .gridCon {
@@ -20,7 +20,21 @@
 }
 
 .gridBox {
-    background-color: rgb(255, 255, 255);
     border: solid 1px rgb(216, 216, 216);
     box-sizing: border-box;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.ink {
+    background-color: black;
+}
+
+button {
+    padding: 1em;
+    font-size: 20px;
 }
